--- a/markdown.css
+++ b/markdown.css
@@ -3,13 +3,13 @@
     text-align: center;
     font-size: 12px;
     color: #C8C8C8;
-  }
+}
 body {
     font: 400 16px/1.42 -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Droid Sans Fallback, Microsoft YaHei, sans-serif;
     color: rgba(7, 5, 5, 0.86);
 }
 p {
-    margin: 10px 0;
+    margin: 1em 0;
 }
 h1, h2, h3 {
     margin: 0;
@@ -40,7 +40,7 @@ strong, b {
     font-weight: bold;
 }
 .CodeMirror pre, .content {
-    line-height: 1.62;
+    line-height: 1.7;
     font-family: Droid Serif, PingFang SC, Hiragino Sans GB, Droid Sans Fallback, Microsoft YaHei, sans-serif;
     color: rgba(0, 0, 0, .86);
 }
